@@ -51,8 +51,6 @@ title.dielectric=Dielectric
 title.view=View
 title.meters=Meters
 
-tooltip.scaleButton=<html>Changes the meter's scale<br>to match the value.</html>
- 
 units.volts=V
 units.millimeters=mm
 units.millimetersSquared=mm<sup>2</sup>
